# lrclib-client

./: flake.nix  lrclib-client.cabal
docs/: LrcLib-Client.html  LrcLib-Types.html  doc-index.html  doc-index.json  lrclib-client.haddock  lrclib-client.txt
docs/src/: LrcLib.Client.html  LrcLib.Types.html
src/LrcLib/: Client.hs  HTTP.hs  Types.hs
test/: Main.hs  challenge  challenge.json  getUrlNotFound.json  getUrlSuccess  getUrlSuccess.json  search.json  search.txt
