cabal-version:      3.0

name:               lrclib-client
version:            0.1.0.0
synopsis:           A Haskell client for the LrcLib API (lyrics database)
description:
  This library provides types and functions to interact with the
  LrcLib API (<https://lrclib.net>), a community-driven lyrics database.
  Supports fetching, searching, and submitting lyrics with proper metadata.

homepage:           https://github.com/proggerx/lrclib-client
bug-reports:        https://github.com/proggerx/lrclib-client/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX <x@proggers.ru>
maintainer:         ProggerX <x@proggers.ru>
copyright:          2026 Progger X <x@proggers.ru>
category:           Music, Web, API
build-type:         Simple

source-repository head
  type:             git
  location:         https://github.com/proggerx/lrclib-client.git

common warnings
  ghc-options:      -Wall

library
  import:           warnings
  exposed-modules:  LrcLib.Client, LrcLib.Types
  build-depends:    base >= 4.18,
                    wreq,
                    aeson,
                    lens,
                    text,
                    bytestring,
                    base16-bytestring,
                    mtl,
                    cryptohash-sha256

  hs-source-dirs:   src
  default-language: GHC2021
