cabal-version:      3.0

name:               lrclib-client
version:            0.3.1
synopsis:           A Haskell client for the LrcLib API (lyrics database)
description:
  This library provides types and functions to interact with the
  LrcLib API (<https://lrclib.net>), a community-driven lyrics database.
  Supports fetching, searching, and submitting lyrics with proper metadata.

homepage:           https://github.com/proggerx/lrclib-client
bug-reports:        https://github.com/proggerx/lrclib-client/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             Sand Gurt <x@proggers.ru>
maintainer:         Sand Gurt <x@proggers.ru>
copyright:          2026 Sand Gurt <x@proggers.ru>
category:           Music, Web, API
build-type:         Simple
extra-source-files: ./test/*.json, ./test/*.txt

source-repository head
  type:             git
  location:         https://github.com/proggerx/lrclib-client.git

common warnings
  ghc-options:      -Wall

library
  import:           warnings
  exposed-modules:  LrcLib.Client, LrcLib.Types
  other-modules:    LrcLib.HTTP
  build-depends:    aeson >= 2.2.3 && < 2.3,
                    base >= 4.19 && < 4.21,
                    base16-bytestring >= 1.0.2 && < 1.1,
                    bytestring >= 0.12.2 && < 0.13,
                    cryptohash-sha256 >= 0.11.102 && < 0.12,
                    http-client >= 0.7.19 && < 0.8,
                    http-client-tls >= 0.3.6 && < 0.4,
                    http-types >= 0.12.4 && < 0.13,
                    mtl >= 2.3.1 && < 2.4,
                    text >= 2.1.3 && < 2.2,
  hs-source-dirs:   src
  default-language: GHC2024

test-suite test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    aeson, base, bytestring, tasty, tasty-hunit, lrclib-client
  default-language: GHC2024
